[package]
name = "voml-collection"
version = "0.1.1"
authors = ["192607617@qq.com"]
description = "Collections for [VOML]()"
repository = "https://github.com/doki-land/arc-rs"
documentation = "https://docs.rs/voml-collection"
readme = "../../Readme.md"
license = "MPL-2.0"
exclude = ["/tests/*"]
edition = "2021"

[dependencies]
num = { version = "0.4.0", features = ["serde"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
indexmap = { version = "1.9.1", features = ["serde"] }

[dev-dependencies]

[features]
default = []
