[package]
name = "vos-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indenter = { version = "0.3.3", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }
indexmap = { version = "1.9.1", features = ["serde"] }
voml-collection = "0.2.0"
http = "0.2.8"

[dependencies.vos-error]
version = "0.3.2"
path = "../vos-error"
features = ["num", "bigdecimal", "email_address", "url", "serde_json", "semver"]



[dev-dependencies]


[build-dependencies]
peginator = "0.3.0"

[features]
default = []
faker = []
validator = []
#json = ["vos-error/serde_json"]