[package]
name = "vos-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indenter = { version = "0.3.3", features = ["std"] }
serde = { version = "1.0.149", features = ["derive"] }
indexmap = { version = "1.9.2", features = ["serde"] }
voml-collection = "0.3.1"
http = "0.2.8"
rand = { version = "0.8.5", features = ["small_rng"] }
diagnostic-quick = "0.2.6"


[dev-dependencies]
peginator_codegen = "0.6.0"



[features]
default = []
faker = []
validator = []
