[package]
name = "vos-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indenter = { version = "0.3.3", features = ["std"] }
serde = { version = "1.0.155", features = ["derive"] }
indexmap = { version = "1.9.2", features = ["serde"] }
voml-collection = "0.3.2"
rand = { version = "0.8.5", optional = true, features = ["small_rng", "simd_support"] }
chrono = "0.4.23"

[dependencies.diagnostic-quick]
version = "0.4.0"
features = ["email_address", "semver", "url", "num", "rust_decimal"]


[dev-dependencies]
peginator_codegen = "0.6.0"

[features]
default = []
faker = ["rand"]
validator = []
