[package]
name = "vos-error"
version = "0.3.3"
authors = ["Aster <192607617@qq.com>"]
description = "Virtual Object Schema shared error types"
repository = "https://github.com/voml/vos-rs"
homepage = "https://github.com/voml/vos-rs"
documentation = "https://docs.rs/vos-error"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
diagnostic = "0.3.3"
peginator = { version = "0.3.0", optional = true }
num = { version = "0.4.0", features = ["serde"], optional = true }
bigdecimal = { version = "0.3.0", features = ["serde"], optional = true }
serde_json = { version = "1.0.87", optional = true }
url = { version = "2.3.1", features = ["serde"], optional = true }
email_address = { version = "0.2.3", features = ["serde"], optional = true }
uuid = { version = "1.2.1", features = ["serde"], optional = true }
semver = { version = "1.0.14", features = ["serde"], optional = true }

#[dependencies.diagnostic]
#git = "https://github.com/oovm/diagnostic-rs"
#rev = "cb893898"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
