[package]
name = "vos-for-rust"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/voml/vos-rs"
homepage = "https://github.com/voml/vos-rs"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.2"
num = "0.4.0"
bigdecimal = "0.3.0"
peginator = "0.6.0"
unicode-ident = "1.0.6"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"

[dependencies.vos-error]
version = "0.3.2"
features = ["bigdecimal", "peginator"]

[dev-dependencies]

[build-dependencies]
peginator = "0.6.0"

[features]
default = []

