[package]
name = "vos-openapi"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
openapiv3 = "1.0.1"
json5 = "0.4.1"


[dependencies.vos-core]
version= "0.0.0"
path = "../vos-core"
features = []

[dev-dependencies]

[build-dependencies]
peginator = "0.3.0"

[features]
default = []
